[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

###############################################################################
[tool.poetry]
name = "smqtk_classifier"
# REMEMBER: `distutils.version.*Version` types can be used to compare versions
# from strings like this.
# SMQTK prefers to use the strict numbering standard when possible.
version = "0.18.0"
description = """\
    Algorithms, data structures and utilities around performing classification\
    of inputs."""
license = "BSD-3-Clause"
authors = ["Kitware, Inc. <smqtk-developers@kitware.com>"]
readme = "README.md"
repository = "https://github.com/Kitware/SMQTK-Classifier"
documentation = "https://smqtk-classifier.readthedocs.io/"
classifiers = [
        'Development Status :: 3 - Alpha',
        'Intended Audience :: Developers',
        'Intended Audience :: Science/Research',
        'License :: OSI Approved :: BSD License',
        'Operating System :: MacOS :: MacOS X',
        'Operating System :: Unix',
        'Programming Language :: Python :: 3',
        'Programming Language :: Python :: 3.6',
        'Programming Language :: Python :: 3.7',
        'Programming Language :: Python :: 3.8',
        'Programming Language :: Python :: 3.9',
]

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.19.5"
smqtk-core = ">=0.18.0"
smqtk-dataprovider = ">=0.16.0"
smqtk-descriptors = ">=0.16.0"
scikit-learn = {version = "^0.24.1", optional = true}

[tool.poetry.extras]
sklearn = [ "scikit-learn" ]

[tool.poetry.dev-dependencies]
# CI
flake8 = "^3.9.0"
flake8-mutable = "^1.2.0"
mypy = "^0.812"
# Docs
# - Also see: `docs/readthedocs-reqs.txt` for use by RTD
Sphinx = "^3.5.3"
sphinx-rtd-theme = "^0.5.1"
sphinx-argparse = "^0.2.5"
sphinx-prompt = "^1.4.0"
livereload = "^2.6.3"
# Testing
coverage = "^5.5"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
# Development
ipython = "^7.16"
# because 0.18 does not work with ipy 7.16.1 in py3.6
jedi = "^0.17"

[tool.poetry.plugins."smqtk_plugins"]
# ClassificationElement
"smqtk_classifier.impls.classification_element.file" = "smqtk_classifier.impls.classification_element.file"
"smqtk_classifier.impls.classification_element.memory" = "smqtk_classifier.impls.classification_element.memory"
"smqtk_classifier.impls.classification_element.postgres" = "smqtk_classifier.impls.classification_element.postgres"
# Classify Descriptor
"smqtk_classifier.impls.classify_descriptor.classify_index_label_descriptor" = "smqtk_classifier.impls.classify_descriptor.classify_index_label_descriptor"
# Supervised
"smqtk_classifier.impls.classify_descriptor_supervised.libsvm" = "smqtk_classifier.impls.classify_descriptor_supervised.libsvm"
"smqtk_classifier.impls.classify_descriptor_supervised.sklearn_logistic_regression" = "smqtk_classifier.impls.classify_descriptor_supervised.sklearn_logistic_regression"

###############################################################################
[tool.pytest.ini_options]
addopts = [
    "-lv",                      # Show local in trace-backs.
    "--doctest-modules",        # Increased verbosity.
    "--tb=long",                # Trace-back print mode.
    "--cov=smqtk_classifier",   # Cover our package specifically
    "--cov-report=term",        # Coverage report to terminal
]
testpaths = [
    "tests",
    "smqtk_classifier",
]
norecursedirs = [
    "tests/data"
]
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "IGNORE_EXCEPTION_DETAIL",
]
