[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

###############################################################################
[tool.poetry]
name = "smqtk_classifier"
# REMEMBER: `distutils.version.*Version` types can be used to compare versions
# from strings like this.
# SMQTK prefers to use the strict numbering standard when possible.
version = "0.19.0"
description = """\
    Algorithms, data structures and utilities around performing classification\
    of inputs."""
license = "BSD-3-Clause"
authors = ["Kitware, Inc. <smqtk-developers@kitware.com>"]
readme = "README.md"
repository = "https://github.com/Kitware/SMQTK-Classifier"
documentation = "https://smqtk-classifier.readthedocs.io/"
classifiers = [
        'Development Status :: 3 - Alpha',
        'Intended Audience :: Developers',
        'Intended Audience :: Science/Research',
        'License :: OSI Approved :: BSD License',
        'Operating System :: MacOS :: MacOS X',
        'Operating System :: Unix',
        'Programming Language :: Python :: 3',
        'Programming Language :: Python :: 3.10',
        'Programming Language :: Python :: 3.11',
        'Programming Language :: Python :: 3.12',
        'Programming Language :: Python :: 3.13',
]

[tool.poetry.dependencies]
python = "^3.10"
numpy = [
    # Without the hinge, Poetry fails to resolve for py3.13. 2.1 is the first version with py3.13 support.
    {version = ">=1.23.5,<2.0", python = "<3.13" },
    {version = ">=2.1", python = ">=3.13" }
]
smqtk-core = ">=0.20.0"
smqtk-dataprovider = ">=0.19.0"
smqtk-descriptors = ">=0.20"
libsvm-official = {version = ">=3.30,<3.31", optional = true}
scikit-learn = {version = ">=1.6", optional = true}

[tool.poetry.extras]
libsvm = [ "libsvm-official" ]
sklearn = [ "scikit-learn" ]

[tool.poetry.dev-dependencies]
# CI
flake8 = ">=6"
flake8-mutable = ">=1.2"
mypy = ">=0.991"
# Docs
# - Also see: `docs/readthedocs-reqs.txt` for use by RTD
Sphinx = ">=5.3"
sphinx-rtd-theme = ">=1.1.1"
sphinx-argparse = ">=0.4"
sphinx-prompt = ">=1.5"
livereload = ">=2.6.3"
# Testing
coverage = ">=6.5"
pytest = ">=7.2"
pytest-cov = ">=4"
# Development
ipython = ">=8.6.0"

[tool.poetry.plugins."smqtk_plugins"]
# ClassificationElement
"smqtk_classifier.impls.classification_element.file" = "smqtk_classifier.impls.classification_element.file"
"smqtk_classifier.impls.classification_element.memory" = "smqtk_classifier.impls.classification_element.memory"
"smqtk_classifier.impls.classification_element.postgres" = "smqtk_classifier.impls.classification_element.postgres"
# Classify Descriptor
"smqtk_classifier.impls.classify_descriptor.classify_index_label_descriptor" = "smqtk_classifier.impls.classify_descriptor.classify_index_label_descriptor"
# Supervised
"smqtk_classifier.impls.classify_descriptor_supervised.libsvm" = "smqtk_classifier.impls.classify_descriptor_supervised.libsvm"
"smqtk_classifier.impls.classify_descriptor_supervised.sklearn_logistic_regression" = "smqtk_classifier.impls.classify_descriptor_supervised.sklearn_logistic_regression"
"smqtk_classifier.impls.classify_descriptor_supervised.sklearn_svm" = "smqtk_classifier.impls.classify_descriptor_supervised.sklearn_svm"

###############################################################################
[tool.pytest.ini_options]
addopts = [
    "-lv",                            # Show local in trace-backs.
    "--doctest-modules",              # Increased verbosity.
    "--tb=long",                      # Trace-back print mode.
    "--cov=./smqtk_classifier",       # Cover our package specifically
    "--cov=./tests",                  # Also cover our tests for dead spots
    "--cov-report=term",              # Coverage report to terminal
    "--cov-report=xml:coverage.xml"   # For external tool reporting
]
testpaths = [
    "tests",
    "smqtk_classifier",
]
norecursedirs = [
    "tests/data"
]
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "IGNORE_EXCEPTION_DETAIL",
]
